--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.848.0",
+    "@aws-sdk/lib-dynamodb": "^3.848.0",
     "axios": "^1.6.5",
+    "formidable": "^3.5.4",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "react": "^18",
